force-app/main/default/objects/Transaction_Task_Def__mdt/Transaction_Task_Def__mdt.object-meta.xml
<CustomObject>
    <label>Transaction Task Def</label>
    <pluralLabel>Transaction Task Defs</pluralLabel>
</CustomObject>