force-app/main/default/objects/Transaction_Task_Def__mdt/fields/Blocked_By_Group_Letter__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By_Group_Letter__c</fullName>
    <description>Group letter of the prerequisite named by Blocked_By_Sequence__c. BLANK MEANS THE SAME GROUP AS THIS ROW, which is true of both live pairs (B3 blocked by B2, I8 blocked by I7). It exists so a future cross-group prerequisite - for example a J-group item blocked by an I-group item - is a definition edit rather than a schema change plus a fan-out rewrite. Ignored when Blocked_By_Sequence__c is blank.</description>
    <inlineHelpText>Group letter of the prerequisite item. Leave blank when the prerequisite is in the same group as this row.</inlineHelpText>
    <label>Blocked By Group Letter</label>
    <length>3</length>
    <type>Text</type>
</CustomField>