force-app/main/default/objects/Transaction_Task_Def__mdt/fields/Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Status__c</fullName>
    <label>Default Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>