force-app/main/default/objects/Transaction_Task_Def__mdt/fields/Group_Letter__c.field-meta.xml
<CustomField>
    <fullName>Group_Letter__c</fullName>
    <label>Group Letter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>