force-app/main/default/objects/Transaction_Task_Def__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>120</length>
    <type>Text</type>
</CustomField>